--- a/quiz-App/style.css
+++ b/quiz-App/style.css
@@ -52,3 +52,49 @@
     box-shadow: 0px -1px 1px grey;
     width: 100%;
 }
+button {
+    display: inline-block;
+    position: relative;
+    overflow: hidden;
+    transition: all 0.5s ease-in;
+    z-index: 1;
+   }
+   
+   button::before,
+   button::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    width: 0;
+    height: 100%;
+    transform: skew(15deg);
+    transition: all 0.5s;
+    overflow: hidden;
+    z-index: -1;
+   }
+   
+   button::before {
+    left: -10px;
+    background: #240046;
+   }
+   
+   button::after {
+    right: -10px;
+    background: #5a189a;
+   }
+   
+   button:hover::before,
+   button:hover::after {
+    width: 58%;
+   }
+   
+   button:hover span {
+    color: white;
+    transition: 0.3s;
+   }
+   
+   button span {
+    color: white;
+    font-size: 18px;
+    transition: all 0.3s ease-in;
+   }
