--- a/click-counter/style.scss
+++ b/click-counter/style.scss
@@ -2,49 +2,52 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
-html, body {
+html,
+body {
   height: 100%;
   width: 100%;
   background-color: #424250;
 }
 
-.main{
-    width: 100%;
-    height: 100%;
+.main {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 20px;
+
+  .cont {
+    width: 35%;
     display: flex;
     justify-content: center;
     align-items: center;
-    border-radius: 20px;
+    background-color: #33333d;
+    flex-direction: column;
 
-    .cont{
-      width: 35%;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        background-color: #33333d;
-        flex-direction: column;
-        
-        p{
-            padding: 3rem 0;
-            color: #31c48d;
-            font-size: 10rem;
-        }
-
-        .btns{
-          display: flex;
-          width: 100%;
-        }
-        button{
-          flex: 1;
-            padding: 1rem 0;
-            font-size: 3rem;
-            color: white;
-            background-color: #33333d;
-            border: none;
-            border-top: 1px solid rgb(88, 85, 85);
-            border-right: 1px solid rgb(88, 85, 85);
-        }
+    p {
+      padding: 3rem 0;
+      color: #31c48d;
+      font-size: 10rem;
     }
+
+    .btns {
+      display: flex;
+      width: 100%;
+    }
+    button {
+      flex: 1;
+      padding: 1rem 0;
+      font-size: 3rem;
+      color: white;
+      background-color: #33333d;
+      border: none;
+      border-top: 1px solid rgb(88, 85, 85);
+      border-right: 1px solid rgb(88, 85, 85);
+    }
+  }
 }
